# mnemo

./: .gitignore  AUTHORS  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac  mnemo.pc.in  shell.nix
bindings/: Makefile.am
bindings/python/mnemo/: __init__.py  reuse.py
include/: Makefile.am  mnemo.h
include/internal/: utsplay.h
include/mnemo/utils/: version.h.in
src/: Makefile.am  mnemo.c  reuse.c
tests/: Makefile.am
